# ProperCompleteGuideProject

./: .env  .gitignore  Dockerfile  commands.txt  docker-compose.yml  pyproject.toml
app/: alembic.ini  database.py  deps.py  main.py  security.py
app/alembic/: env.py
app/alembic/versions/: 2059f2a36a55_initial_migration.py  2769e910db3c_.py  ae90c4997175_fix.py
app/models/: __init__.py  models.py
