[tool.poetry]
name = "propercompleteguideproject"
version = "0.1.0"
description = ""
authors = ["Andrea <andrea.cavallo.pc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
alembic = "^1.14.0"
sqlmodel = "^0.0.22"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
